[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
